setting up fetch

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     col-->
     <!-- jquery script -->
     <!-- js script -->
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
