--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css links -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
     <!-- navbar -->
+    <header>
+        <h1 class="w3-container w3-teal">Crypto Tracker</h1>
+    </header>
     <!-- searchbar
     input field
     search button
