added search bar and jquery link

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     input field
     search button
     -->
+    <div class = "search">
+        <input id ="search-bar" class="w3-input w3-border" type="text">
+    </div>
     <!-- api info div 
     container div
     row
     col-->
     <!-- jquery script -->
+    <script src="jquery-3.5.1.min.js"></script>
     <!-- js script -->
     <script src="./assets/js/scriptNYT.js"></script>
     <script src="./assets/js/scriptGecko.js"></script>
