--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     container div
     row
     col-->
+    <div>
+        <div class="price"></div>
+        <div class="news"></div>
+    </div>
     <!-- jquery script -->
     <script src="jquery-3.5.1.min.js"></script>
     <!-- js script -->
