--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <div class = "search">
         <input id ="search-bar" class="w3-input w3-border" type="text">
     </div>
+    <form>
+        <div id="form" class="form-group">
+            <label for="searchInput"><strong>Search for a Crypto:</strong></label>
+            <input type="text" class="form-control" id="search-bar" placeholder="Type here...">
+        </div>
+        <button id="search" type="submit" class="btn btn-primary btn-block mb-2">Search</button>
+    </form>
     <!-- api info div 
     container div
     row
