updated jquery link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form>
         <div id="form" class="form-group">
             <label for="searchInput"><strong>Search for a Crypto:</strong></label>
-            <input type="text" class="form-control" id="search-bar" placeholder="Type here...">
+            <input type="text" id="search-bar" placeholder="Type here...">
         </div>
         <button id="search" type="submit" class="btn btn-primary btn-block mb-2">Search</button>
     </form>
@@ -36,7 +36,7 @@
         <div class="news"></div>
     </div>
     <!-- jquery script -->
-    <script src="jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- js script -->
     <script src="./assets/js/scriptNYT.js"></script>
     <script src="./assets/js/scriptGecko.js"></script>
