updated search bar

--- a/index.html
+++ b/index.html
@@ -17,16 +17,9 @@
     input field
     search button
     -->
-    <div class = "search">
-        <input id ="search-bar" class="w3-input w3-border" type="text">
-    </div>
     <form>
-        <div id="form" class="form-group">
-            <label for="searchInput"><strong>Search for a Crypto:</strong></label>
-            <input type="text" id="search-bar" placeholder="Type here...">
-        </div>
-        <button id="search" type="submit" class="btn btn-primary btn-block mb-2">Search</button>
-    </form>
+        <input class="w3-input w3-border" type="text" id="search-bar" name="fname" placeholder="Search for Crypto">
+      </form>
     <!-- api info div 
     container div
     row
