udpated search bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     search button
     -->
     <form>
-        <input class="w3-input w3-border" type="text" id="search-bar" name="fname" placeholder="Search for Crypto">
+        <input class="w3-input w3-border" type="text" id="search-bar" placeholder="Search for Crypto">
+        <button id="search" type="submit" class="btn btn-primary btn-block mb-2">Search</button> 
       </form>
     <!-- api info div 
     container div
