--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     container div
     row
     col-->
-    <div>
-        <div class="price"></div>
-        <div class="news"></div>
+    <div id="api-container">
+        <div id="price">hello</div>
+        <div id="news">goodbye</div>
     </div>
     <!-- jquery script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
