--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <!-- css links -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- navbar -->
@@ -17,10 +18,17 @@
     input field
     search button
     -->
-    <form>
-        <input class="w3-input w3-border" type="text" id="search-bar" placeholder="Search for Crypto">
-        <button id="search" type="submit" class="btn btn-primary btn-block mb-2">Search</button> 
-      </form>
+    <div id="search-container">
+        <form>
+            <select id="search-bar" class="w3-select" name="option">
+                <option value="" disabled selected>Choose your option</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
+            <button id="search" type="submit" class="w3-button">Search</button> 
+        </form>
+    </div>
     <!-- api info div 
     container div
     row
