news headline and link function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form>
             <select id="search-bar" class="w3-select" name="option">
                 <option value="" disabled selected>Choose your option</option>
-                <option value="1">Option 1</option>
+                <option value="1">bitcoin</option>
                 <option value="2">Option 2</option>
                 <option value="3">Option 3</option>
               </select>
