Added favorite button to nytimes api and set up local storage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     container div
     row
     col-->
-    <div id="api-container" class="w3-row">
+    <div id="api-container" class="w3-row api-container">
 
           <div class="w3-col m6 l6 w3-card-2 w3-margin-top w3-margin-bottom">
             <header class="w3-container w3-blue">
