--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     col-->
     <div id="api-container" class="w3-row">
 
-          <div class="w3-col m6 l6 w3-card-2 w3-margin-top w3-margin-bottom">
+          <!-- <div class="w3-col m6 l6 w3-card-2 w3-margin-top w3-margin-bottom">
             <header class="w3-container w3-blue">
               <h3>Coin Name #1<button class="w3-button w3-circle w3-teal w3-right w3-margin-bottom">☆</button></h3>
             </header>
@@ -61,13 +61,13 @@
             <footer class="w3-container w3-blue">
               <h5>Price</h5>
             </footer>
-          </div>
+          </div> -->
       </div>
 
     <!-- jquery script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- js script -->
-    <script src="./assets/js/scriptNYT.js"></script>
     <script src="./assets/js/scriptGecko.js"></script>
+    <script src="./assets/js/scriptNYT.js"></script>
   </body>
 </html>
