--- a/finance.html
+++ b/finance.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="w3-container w3-teal">
+    <header class="w3-container">
       <h1>Get Started</h1>
     </header>
 
